2000-03-22  Matt Loper  <matt@helixcode.com>

	* camel-formatter.c (debug): Disabled some useless debug
	messaging.

2000-03-21  Dan Winship  <danw@helixcode.com>

	* providers/pop3: some initial bits of the POP3 provider, to
	make Matt happy. Incomplete, untested, etc.

2000-03-21  bertrand  <bertrand@helixcode.com>

	* providers/mbox/camel-mbox-summary.c 
	(camel_mbox_summary_append_internal_to_external): copy the size field

	* providers/mbox/camel-mbox-folder.c (_get_message_by_uid): initialize 
	message_info to NULL

	* camel-folder-summary.h: added the size field.

	* providers/mbox/camel-mbox-summary.h: 
	added the received_date field.

	* providers/mbox/camel-mbox-summary.c:
	documented all functions.

	* camel-folder-summary.h: name change and 
	new fields.

	* providers/mbox/camel-mbox-search.c: update to 
	conform to name change in the summary fields.

2000-03-10  bertrand  <bertrand@helixcode.com>

	* camel-service.h: cosmetic changes.

2000-03-09  Dan Winship  <danw@helixcode.com>

	* s/HelixCode/Helix Code, Inc./ in the copyrights

2000-03-07  bertrand  <bertrand@helixcode.com>

	* camel-formatter.c (handle_mime_part): 
	plug mem leaks due to bad documentation
	of camel_content_field_get_mime_type
	(print_camel_body_part): idem
	(handle_multipart_alternative): idem

	* gmime-content-field.c (gmime_content_field_get_mime_type): 
	documentation fix.


	* camel-mime-part.c (my_finalize): unref the 
	content_input_stream if any. 

2000-03-06  bertrand  <bertrand@helixcode.com>

	* camel-stream-fs.c (_seek): fix a bogus calculation
	in the return position.

2000-03-05  bertrand  <bertrand@helixcode.com>

	* camel-session.h: cosmetic fixes.

	* camel-stream-fs.c (_read): 
	(_seek): fixed the current position so that it refers
	to the current position in the stream, not in its parent.

2000-03-04  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-search.c
	(camel_mbox_folder_search_by_expression): Ref the summary
	after we have got it.
