@@ -62,7 +62,8 @@ typedef struct {
 
 /* support functions */
 enum { CAMEL_POP3_OK, CAMEL_POP3_ERR, CAMEL_POP3_FAIL };
-int camel_pop3_command (CamelStreamBuffer *stream, char **ret, char *fmt, ...);
+int camel_pop3_command (CamelPop3Store *store, char **ret, char *fmt, ...);
+char *camel_pop3_command_get_additional_data (CamelPop3Store *store);
 
 /* Standard Gtk function */
 GtkType camel_pop3_store_get_type (void);
